[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moka = "0.9"
serde = "1.0"
serde_json = "1.0"
rand = { version = "0.8.5", features = [] }
colored = { version = "2.0", features = [] }